; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_multixact.c_AtEOXact_MultiXact.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_multixact.c_AtEOXact_MultiXact.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidMultiXactId = common dso_local global i8* null, align 8
@OldestMemberMXactId = common dso_local global i8** null, align 8
@MyBackendId = common dso_local global i64 0, align 8
@OldestVisibleMXactId = common dso_local global i8** null, align 8
@MXactContext = common dso_local global i32* null, align 8
@MXactCache = common dso_local global i32 0, align 4
@MXactCacheMembers = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AtEOXact_MultiXact() #0 {
  %1 = load i8*, i8** @InvalidMultiXactId, align 8
  %2 = load i8**, i8*** @OldestMemberMXactId, align 8
  %3 = load i64, i64* @MyBackendId, align 8
  %4 = getelementptr inbounds i8*, i8** %2, i64 %3
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** @InvalidMultiXactId, align 8
  %6 = load i8**, i8*** @OldestVisibleMXactId, align 8
  %7 = load i64, i64* @MyBackendId, align 8
  %8 = getelementptr inbounds i8*, i8** %6, i64 %7
  store i8* %5, i8** %8, align 8
  store i32* null, i32** @MXactContext, align 8
  %9 = call i32 @dlist_init(i32* @MXactCache)
  store i64 0, i64* @MXactCacheMembers, align 8
  ret void
}

declare dso_local i32 @dlist_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
